--- a/food_flow/src/app/home/home.page.html
+++ b/food_flow/src/app/home/home.page.html
@@ -5,9 +5,9 @@
       <div class="header-top">
         <div class="logo-section">
           <div class="logo-icon">
-            <span>D</span>
+            <span>F</span>
           </div>
-          <h1 class="logo-text">DeliveryApp</h1>
+          <h1 class="logo-text">FoodFlow</h1>
         </div>
         <ion-button fill="clear" (click)="onProfileClick()" class="profile-button">
           <ion-icon name="person-outline"></ion-icon>
@@ -25,7 +25,6 @@
 
       <!-- Barra de Busca -->
       <div class="search-container">
-        <ion-icon name="search-outline" class="search-icon"></ion-icon>
         <ion-searchbar 
           placeholder="Buscar restaurantes ou pratos..." 
           [(ngModel)]="searchQuery"
