--- a/food_flow/src/app/profile/profile.page.scss
+++ b/food_flow/src/app/profile/profile.page.scss
@@ -9,17 +9,17 @@
   
   .profile-icon {
     font-size: 64px;
-    color: var(--ion-color-medium);
+    color: var(--foodflow-text-muted);
     margin-bottom: 16px;
   }
   
   h2 {
-    color: var(--ion-color-dark);
+    color: var(--foodflow-text-primary);
     margin: 0 0 8px 0;
   }
   
   p {
-    color: var(--ion-color-medium);
+    color: var(--foodflow-text-muted);
     margin: 0;
   }
 }
